local/manifests/analyzer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: analyzer
  namespace: garden
spec:
  type: ClusterIP
  selector:
    app: analyzer
  ports:
    - port: 8080
      targetPort: http
