local/manifests/grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: garden
spec:
  type: ClusterIP
  selector:
    app: grafana
  ports:
    - port: 3000
      targetPort: http
