local/manifests/minio-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: garden
spec:
  type: ClusterIP
  selector:
    app: minio
  ports:
    - port: 9000
      targetPort: api
      name: api
    - port: 9001
      targetPort: console
      name: console
