local/manifests/grafana-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: garden-grafana
  namespace: garden
spec:
  entryPoints:
    - websecure
  tls: {}
  routes:
    - match: Host(`garden.homelab.bertbullough.com`)
      kind: Rule
      middlewares:
        - name: security-headers
          namespace: traefik
      services:
        - name: grafana
          port: 3000
